# itunes-audiobook-from-mp3

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  activate.sh  data.json  ios-audiobook-from-mp3.py  itunes-audiobook-from-mp3.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pip_publish.yml  static.yml
htmlcov/: class_index.html  d_e3c435f8a3a087d8___about___py.html  d_e3c435f8a3a087d8_main_py.html  d_e3c435f8a3a087d8_tags_py.html  function_index.html  index.html  status.json  z_e3c435f8a3a087d8___about___py.html  z_e3c435f8a3a087d8_main_py.html  z_e3c435f8a3a087d8_tags_py.html
scripts/: compile_requirements.sh  include_pyproject_requirements.py  verup.sh
src/: itunes_audiobook_from_mp3.py
src/audiobook_tags/: __init__.py  main.py  tags.py
tests/: conftest.py  test_cli.py  test_conversion.py  test_files_load.py
